# micro-apps

agentic/: create_topics.sh  docker-compose.yml  test_kafka_push.py  test_producer.py
agentic/small/: .mcp.json  CMakeLists.txt  add.cpp  factorial.c  greet.txt  hello_world.cpp  modules.order  newfile.txt  py.txt  test.txt
agentic/small/.opencode/: opencode.json
agentic/small/hello-kernel-driver/: Makefile  mydrv.c
agentic/small/hello-kernel-driver/specs/: feature.md
agentic/small/scripts/: factorial.py  fifo_queue.py  test_factorial.py
agentic/to-micro-apps/: Book.md  CMakeLists.txt  chat.py  chat.sh  ex1.py  ex1_llama.py  g_features.py  g_futures.py  gate_contracts_mini.md  my_harness.py  sel_get.py  vec.hpp
agentic/to-micro-apps/cpp/: CMakeLists.txt  Vec2.hpp  Vector.hpp  VectorTest.cpp
agentic/to-micro-apps/cursor/: Code.md  Materials.md  ReadMe.md  Srt.md
agentic/to-micro-apps/cursor/code/: conftest.py  hanzi_db.py  requirements.txt  test_cache.py  test_china.py  test_hanzidb.py  test_radicals.py
agentic/to-micro-apps/cursor/features/: Cache.md
agentic/to-micro-apps/cursor/materials/: luoxiaohei_sentences.json  luoxiaohei_words.csv  radicals_fixed.csv  罗小黑战记二 2025.srt
agentic/to-micro-apps/src/: Vec2.hpp  Vec2Test.cpp  Vec4.py  Vec4Test.py
